# Astrokratia

./: Cargo.toml  flake.nix
assets/3D/environment/: asteroid_01.gltf
src/: main.rs
src/environment/: mod.rs  skybox.rs  solar_system.rs
src/player/: camera.rs  input.rs  player.rs
src/vessels/: mod.rs  movements.rs  spawn.rs  vessels.rs  weapons.rs
