[package]
name = "astrokratia"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = [
    "wayland",
    "dynamic_linking"
]}
bevy_rapier3d = { version = "0.27", features = [  "debug-render-3d" ] }
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
